# slope-studio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GLOBAL_AGENTS.md  LICENSE  Makefile  README.md  build_before_the_law.py  build_imperial_message.py  index.html  privacy.html  pyproject.toml  tos.html
.agent-instructions/: shared.md
assets/audio/: CREDITS.md
brand/pols-chan/: about.md
brand/pols-tv/: about.md
builds/: README.md  build_brand_starship_pilot.py  build_first_sorrow.py
docs/: README.md  agent-instructions-migration-report.md
docs/00-overview/: glossary.md  operator-guide.md  pipeline-stages.md  verdict.md
docs/01-stage-script/: README.md
docs/02-stage-visuals/: README.md
docs/03-stage-video/: README.md
docs/04-stage-stitch/: README.md
docs/05-stage-voiceover/: README.md
docs/06-stage-publish/: README.md  save.md
docs/10-architecture/: cli-component-design.md  cost-model.md  module-map.md  orchestration.md  tiers.md  workflows.md
docs/20-research/: findings.md  open-questions.md  provider-options.md  refuted.md  self-improving-loop.md  sources.md
docs/30-animation/: README.md  atmosphere.md  (+9 more)
examples/: README.md  build_index.py  draw_sample_person.py  make_examples.py  make_music_examples.py
scripts/: build_devto.sh  daily_autopilot.sh  deploy_gallery.sh  fetch_music.py  fetch_sfx.py  tiktok_auth.py
studio/: __init__.py  animate.py  artdirect.py  canvas.py  cli.py  config.py  ffmpeg.py  manifest.py  models.py  paths.py  tiers.py  voices.py
tests/: test_artdirect_parallax.py  test_audio_sfx_cooldown.py  test_critic.py
(+92 files in other folders)
