[project]
name = "slope-studio"
version = "0.1.0"
description = "Automated short-video studio: idea -> published Short. Faceless MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "edge-tts>=6.1",
    "rich>=13.7",
    "pillow>=10.0",
]

[project.optional-dependencies]
fal = ["fal-client>=0.5"]
youtube = ["google-api-python-client>=2.130", "google-auth-oauthlib>=1.2"]
parallax = ["rembg>=2.0", "onnxruntime>=1.17"]   # animator=parallax (2.5D depth)
manim = ["manim>=0.18"]                           # animator=manim (vector animation)
dev = ["ruff>=0.5", "pytest>=8.0"]

[project.scripts]
studio = "studio.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["studio"]

[tool.ruff]
line-length = 120
